# Scientic-Conference-Tool

./: .gitignore  CMakeLists.txt  README.md  conference_tool  main  main.cpp
include/: DataTypes.h  FlowNetwork.h  Graph.h  MaxFlow.h  Menu.h  Parser.h
src/: FlowNetwork.cpp  Menu.cpp  Parser.cpp  main.cpp
